Fixed z-index leftbar problem

--- a/static/flights/css/base.css
+++ b/static/flights/css/base.css
@@ -12,6 +12,8 @@ body {
     background-color: #f3f3f3;
     z-index: 2;
     box-shadow: 0 0 10px #aaa;
+    position: absolute;
+    width: 100%;
 }
 
 .topnav li {
@@ -43,6 +45,7 @@ body {
 #content {
     padding: 10px;
     z-index: -2;
+    padding-top: 65px;
 }
 
 #leftbar {
@@ -56,7 +59,7 @@ body {
     padding: 4px;
     overflow-y: scroll;
     display: none;
-    z-index: -1;
+    z-index: 1;
     padding-top: 60px;
     font-size: 14px;
     box-shadow: 0 2px 4px rgba(0,0,0,.15);
