--- a/static/flights/css/flights.css
+++ b/static/flights/css/flights.css
@@ -3,11 +3,6 @@ body {
     background-color: #ededed;
 }
 
-#viewport {
-    margin-left: 340px;
-    padding-left: 10px;
-}
-
 .flighttable {
     position: static;
     margin-left: auto;
@@ -38,3 +33,8 @@ body {
     padding: 5px 10px;
 }
 
+.time {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+}
